# multimodal-sentiment-analysis

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  GITHUB_ACTIONS_SETUP.md  README.md  VIDEO_PROCESSING_GUIDE.md  app.py  debug_drive.py  pyproject.toml  requirements.txt  run_app.py  simple_model_manager.py  test_audio_model.py  test_download.py  test_drive_links.py  test_vision_model.py
.github/workflows/: check-file-size.yml  deploy-to-hf-space.yml
.streamlit/: config.toml
notebooks/: audio_attention_layer_training.ipynb  audio_pytorch_ensemble_training.ipynb  audio_sentiment_analysis.ipynb  audio_wav2vec2_training.ipynb  vision_resnet50_training.ipynb  vision_swin_s_training.ipynb
src/: __init__.py
src/config/: __init__.py  settings.py
src/models/: __init__.py  audio_model.py  fused_model.py  text_model.py  vision_model.py
src/ui/: __init__.py  styles.py
src/utils/: __init__.py  file_handling.py  preprocessing.py  sentiment_mapping.py  simple_model_manager.py
